--- a/about.html
+++ b/about.html
@@ -159,36 +159,8 @@
         <h1>About</h1>
     </header>
 
-    <div class="content">
-        <h2>Who I am</h2>
-        <p>
-        </p>
+    <h2>Under construction 🚧</h2>
 
-        <h2>Why CTFs and security research</h2>
-        <p>
-        </p>
-        <p>
-        </p>
-
-        <h2>What I'm learning</h2>
-        <p>
-        </p>
-        <ul>
-
-        </ul>
-
-        <h2>Technical background</h2>
-        <p>
-        </p>
-
-        <h2>About the writeups</h2>
-        <p>
-        </p>
-
-        <h2>Outside of security</h2>
-        <p>
-        </p>
-    </div>
 </div>
 </body>
 </html>
