--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
         <h1>About</h1>
     </header>
 
-    <h2>Under construction 🚧</h2>
+    <h2>Under construction 🚧 You can enjoy the cats in the meantime</h2>
 
 </div>
 </body>
