--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
         <h2 class="section-title">CTF Writeups</h2>
 
         <div class="writeup-item">
+            <a href="pwnable-ascii_easy.html">
+                <div class="writeup-header">
+                    <span class="writeup-title">pwnable.kr: ascii_easy</span>
+                    <span class="writeup-date">Jan 2026</span>
+                </div>
+                <p class="writeup-desc">Buffer overflow with ASCII-only payload constraints</p>
+            </a>
+        </div>
+
+        <div class="writeup-item">
             <a href="pwnable-uaf.html">
                 <div class="writeup-header">
                     <span class="writeup-title">pwnable.kr: uaf</span>
@@ -294,14 +304,6 @@
                 </div>
                 <p class="writeup-desc">File descriptor manipulation and Linux I/O fundamentals</p>
             </a>
-        </div>
-
-        <div class="writeup-item wip">
-            <div class="writeup-header">
-                <span class="writeup-title">pwnable.kr: ascii_easy</span>
-                <span class="writeup-date">WIP</span>
-            </div>
-            <p class="writeup-desc">Buffer overflow with ASCII-only payload constraints</p>
         </div>
 
         <div class="writeup-item wip">
