add indexing stuff

--- a/pwnable-fd.html
+++ b/pwnable-fd.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Detailed pwnable.kr fd challenge writeup, explaining file descriptors and Linux I/O concepts.">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pwnable.kr: fd - Yael Shechter</title>
+    <title>pwnable.kr: fd Writeup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://yaelshechter.com/pwnable-fd.html" />
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "TechArticle",
+            "headline": "pwnable.kr fd Writeup - Understanding File Descriptors",
+            "author": {
+                "@type": "Person",
+                "name": "Yael Shechter",
+                "url": "https://yaelshechter.github.io/"
+            },
+            "datePublished": "2026-01-01",
+            "dateModified": "2026-01-01",
+            "keywords": ["pwnable.kr", "fd challenge", "file descriptors", "Linux I/O", "security writeup"],
+            "url": "https://yaelshechter.github.io/pwnable-fd.html"
+        }
+    </script>
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
@@ -235,7 +254,7 @@
 <div class="container">
     <header>
         <a href="index.html" class="back-link">Back to writeups</a>
-        <h1>pwnable.kr: fd</h1>
+        <h1>pwnable.kr: fd writeup</h1>
         <div class="meta">
             <span>📅 Nov 2025</span>
             <span>🏆 1 point</span>
