--- a/pwnable-ascii_easy.html
+++ b/pwnable-ascii_easy.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Detailed pwnable.kr ascii_easy writeup explaining ASCII-only exploitation, libc mapping, ROP limitations, and execve-based exploitation.">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pwnable.kr: ascii_easy - Yael Shechter</title>
+    <title>pwnable.kr ascii_easy Writeup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://yaelshechter.github.io/pwnable-ascii_easy.html">
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "TechArticle",
+            "headline": "pwnable.kr ascii_easy - ASCII-only Exploitation Writeup",
+            "author": {
+                "@type": "Person",
+                "name": "Yael Shechter",
+                "url": "https://yaelshechter.github.io/"
+            },
+            "datePublished": "2026-01-01",
+            "dateModified": "2026-01-01",
+            "keywords": ["pwnable.kr", "ascii_easy", "binary exploitation", "buffer overflow", "CTF writeup"],
+            "url": "https://yaelshechter.github.io/pwnable-ascii_easy.html"
+        }
+    </script>
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
@@ -215,7 +234,7 @@
 <div class="container">
     <header>
         <a href="index.html" class="back-link">Back to writeups</a>
-        <h1>pwnable.kr: ascii_easy</h1>
+        <h1>pwnable.kr: ascii_easy writeup</h1>
         <div class="meta">
             <span>📅 Jan 2026</span>
             <span>🏆 33 points</span>
