--- a/pwnable-leg.html
+++ b/pwnable-leg.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Detailed pwnable.kr leg writeup, covering ARM assembly analysis and exploitation techniques.">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pwnable.kr: leg - Yael Shechter</title>
+    <title>pwnable.kr: leg Writeup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://yaelshechter.github.io/pwnable-leg.html">
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "TechArticle",
+            "headline": "pwnable.kr leg writeup - ARM Assembly Analysis",
+            "author": {
+                "@type": "Person",
+                "name": "Yael Shechter",
+                "url": "https://yaelshechter.github.io/"
+            },
+            "datePublished": "2026-01-01",
+            "dateModified": "2026-01-01",
+            "keywords": ["pwnable.kr", "leg", "writeup", "ARM assembly", "reverse engineering", "PC register"],
+            "url": "https://yaelshechter.github.io/pwnable-leg.html"
+        }
+    </script>
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
@@ -253,7 +272,7 @@
             <a href="index.html">Writeups</a>
             <a href="about.html">About</a>
         </div>
-        <h1>pwnable.kr: leg</h1>
+        <h1>pwnable.kr: leg writeup</h1>
         <div class="meta">
             <span>📅 Nov 2025</span>
             <span>🏆 5 points</span>
