--- a/pwnable-tiny_easy.html
+++ b/pwnable-tiny_easy.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Detailed pwnable.kr tiny_easy writeup explaining exploitation of a 90-byte binary using heap spraying and ASLR bypass techniques.">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pwnable.kr: tiny_easy - Yael Shechter</title>
+    <title>pwnable.kr: tiny_easy Writeup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://yaelshechter.github.io/pwnable-tiny_easy.html">
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "TechArticle",
+            "headline": "pwnable.kr tiny_easy writeup - Exploiting a 90-byte binary with heap spraying and ASLR bypass",
+            "author": {
+                "@type": "Person",
+                "name": "Yael Shechter",
+                "url": "https://yaelshechter.github.io/"
+            },
+            "datePublished": "2026-01-01",
+            "dateModified": "2026-01-01",
+            "keywords": ["pwnable.kr", "tiny_easy", "writeup", "exploit", "heap spraying", "ASLR bypass", "NOP sled", "32-bit"],
+            "url": "https://yaelshechter.github.io/pwnable-tiny_easy.html",
+        }
+    </script>
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
@@ -216,7 +235,7 @@
 <div class="container">
     <header>
         <a href="index.html" class="back-link">Back to writeups</a>
-        <h1>pwnable.kr: tiny_easy</h1>
+        <h1>pwnable.kr: tiny_easy writeup</h1>
         <div class="meta">
             <span>📅 Dec 2025</span>
             <span>🏆 20 points</span>
