--- a/pwnable-uaf.html
+++ b/pwnable-uaf.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Detailed pwnable.kr uaf challenge writeup, covering use-after-free vulnerability exploitation, heap manipulation, and vtable hijacking techniques in C++.">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pwnable.kr: uaf - Yael Shechter</title>
+    <title>pwnable.kr: uaf Writeup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://yaelshechter.com/pwnable-uaf.html" />
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "TechArticle",
+            "headline": "pwnable.kr uaf Writeup - Use-After-Free Exploitation",
+            "author": {
+                "@type": "Person",
+                "name": "Yael Shechter",
+                "url": "https://yaelshechter.github.io/"
+            },
+            "datePublished": "2026-01-01",
+            "dateModified": "2026-01-01",
+            "keywords": ["pwnable.kr", "use-after-free", "heap exploitation", "vtable hijacking", "C++"],
+            "url": "https://yaelshechter.github.com/pwnable-uaf.html",
+        }
+    </script>
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
@@ -244,7 +263,7 @@
 <div class="container">
     <header>
         <a href="index.html" class="back-link">Back to writeups</a>
-        <h1>pwnable.kr: uaf</h1>
+        <h1>pwnable.kr: uaf writeup</h1>
         <div class="meta">
             <span>📅 Dec 2025</span>
             <span>🏆 30 points</span>
