add indexing stuff

--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
         gtag('config', 'G-88239B8JH3');
     </script>
 
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Yael Shechter - Security Research" />
+    <meta property="og:title" content="Yael Shechter | Security Research & Binary Exploitation" />
+    <meta property="og:description" content="Binary exploitation and vulnerability research writeups, focused on Linux internals and hands-on pwnable.kr challenges." />
+    <meta property="og:url" content="https://yaelshechter.github.io/" />
+
+    <meta name="description" content="Security research writeups by Yael Shechter, focusing on binary exploitation, Linux internals, and vulnerability research through hands-on pwnable.kr challenges." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yael Shechter - Security Research</title>
+    <title>Yael Shechter | Security Research & Binary Exploitation Writeups</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="canonical" href="https://yaelshechter.github.io/" />
+
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
     <style>
         * {
@@ -216,6 +225,27 @@
             transform: scale(0.95);
         }
     </style>
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Yael Shechter",
+            "url": "https://yaelshechter.github.io/",
+            "sameAs": [
+                "https://github.com/yaelshechter",
+                "https://www.linkedin.com/in/yaelshechter/"
+            ],
+            "jobTitle": "Software Engineer / Security Researcher",
+            "knowsAbout": [
+                "Binary Exploitation",
+                "Linux Internals",
+                "Vulnerability Research",
+                "CTF Challenges"
+            ]
+        }
+    </script>
+
 </head>
 <body>
 <script>
