--- a/pwnable-asm.html
+++ b/pwnable-asm.html
@@ -116,6 +116,15 @@
             font-family: 'Fira Code', monospace;
         }
 
+        .banner{
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 16px;      /* optional, matches card vibe */
+            margin: 16px 0 24px;
+        }
+
         article {
             background: white;
             padding: 40px;
@@ -250,7 +259,7 @@
     </header>
 
     <article>
-        <img src="images/meme.png" alt="asm meme" class="meme-image" />
+        <img src="images/pwnable-banner.png" alt="banner" class="banner" />
 
         <h2>Challenge Description</h2>
         <p>Mommy! I think I know how to make shellcodes</p>
@@ -484,6 +493,8 @@ Mak1ng_5helLcodE_i5_veRy_eaSy
 [*] Closed connection to localhost port 9026</code></pre>
 
         <p>Woohoo! mission accomplished.</p>
+
+        <img src="images/meme.png" alt="asm meme" class="meme-image" />
 
         <h3>Script Breakdown</h3>
 
