--- a/pwnable-fd.html
+++ b/pwnable-fd.html
@@ -77,6 +77,16 @@
             content: '← ';
         }
 
+        .banner{
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 16px;      /* optional, matches card vibe */
+            margin: 16px 0 24px;
+        }
+
+
         h1 {
             font-size: 36px;
             font-weight: 700;
@@ -268,6 +278,8 @@
     </header>
 
     <article>
+        <img src="images/pwnable-banner.png" alt="banner" class="banner" />
+
         <h2>Challenge Description</h2>
         <p>First, we get this hint:</p>
 
