--- a/pwnable-tiny_easy.html
+++ b/pwnable-tiny_easy.html
@@ -116,6 +116,16 @@
             font-family: 'Fira Code', monospace;
         }
 
+        .banner{
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 16px;      /* optional, matches card vibe */
+            margin: 16px 0 24px;
+        }
+
+
         article {
             background: white;
             padding: 40px;
@@ -251,6 +261,8 @@
     </header>
 
     <article>
+        <img src="images/pwnable-banner.png" alt="banner" class="banner" />
+
         <h2>Challenge Description</h2>
         <pre><code>This is based on real event :) enjoy.
 
