--- a/pwnable-uaf.html
+++ b/pwnable-uaf.html
@@ -278,6 +278,8 @@
     </header>
 
     <article>
+        <img src="images/pwnable-banner.png" alt="banner" class="banner" />
+
         <h2>Challenge Description</h2>
         <p>We get the following hint:</p>
 
