--- a/pwnable-ascii_easy.html
+++ b/pwnable-ascii_easy.html
@@ -116,6 +116,15 @@
             font-family: 'Fira Code', monospace;
         }
 
+        .banner{
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 16px;      /* optional, matches card vibe */
+            margin: 16px 0 24px;
+        }
+
         article {
             background: white;
             padding: 40px;
@@ -248,6 +257,8 @@
     </header>
 
     <article>
+        <img src="images/pwnable-banner.png" alt="banner" class="banner" />
+
         <h2>Challenge Description</h2>
         <p>We get the following hint:</p>
         <pre><code>We often need to make 'printable-ascii-only' exploit payload. You wanna try?
