--- a/pwnable-ascii_easy.html
+++ b/pwnable-ascii_easy.html
@@ -238,6 +238,16 @@
             }
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-88239B8JH3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-88239B8JH3');
+    </script>
 </head>
 <body>
 <div class="container">
