--- a/index.html
+++ b/index.html
@@ -276,6 +276,24 @@
     <main>
         <h2 class="section-title">CTF Writeups</h2>
 
+        <div class="writeup-item wip">
+            <div class="writeup-header">
+                <span class="writeup-title">pwnable.kr: unlink</span>
+                <span class="writeup-date">WIP</span>
+            </div>
+            <p class="writeup-desc">Heap exploitation via unlink attack technique</p>
+        </div>
+
+        <div class="writeup-item">
+            <a href="pwnable-unlink.html">
+                <div class="writeup-header">
+                    <span class="writeup-title">pwnable.kr: unlink</span>
+                    <span class="writeup-date">Jan 2026</span>
+                </div>
+                <p class="writeup-desc">Heap exploitation via unlink attack technique</p>
+            </a>
+        </div>
+
         <div class="writeup-item">
             <a href="pwnable-ascii_easy.html">
                 <div class="writeup-header">
@@ -334,14 +352,6 @@
                 </div>
                 <p class="writeup-desc">File descriptor manipulation and Linux I/O fundamentals</p>
             </a>
-        </div>
-
-        <div class="writeup-item wip">
-            <div class="writeup-header">
-                <span class="writeup-title">pwnable.kr: unlink</span>
-                <span class="writeup-date">WIP</span>
-            </div>
-            <p class="writeup-desc">Heap exploitation via unlink attack technique</p>
         </div>
 
         <div class="writeup-item wip">
