--- a/pwnable-uaf.html
+++ b/pwnable-uaf.html
@@ -116,6 +116,15 @@
             font-family: 'Fira Code', monospace;
         }
 
+        .banner{
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 16px;      /* optional, matches card vibe */
+            margin: 16px 0 24px;
+        }
+
         article {
             background: white;
             padding: 40px;
