--- a/index.html
+++ b/index.html
@@ -277,6 +277,16 @@
         <h2 class="section-title">CTF Writeups</h2>
 
         <div class="writeup-item">
+            <a href="pwnable-syscall.html">
+                <div class="writeup-header">
+                    <span class="writeup-title">pwnable.kr: syscall</span>
+                    <span class="writeup-date">Jan 2026</span>
+                </div>
+                <p class="writeup-desc">Kernel syscall table manipulation and privilege escalation</p>
+            </a>
+        </div>
+
+        <div class="writeup-item">
             <a href="pwnable-ascii_easy.html">
                 <div class="writeup-header">
                     <span class="writeup-title">pwnable.kr: ascii_easy</span>
@@ -346,13 +356,6 @@
             </a>
         </div>
 
-        <div class="writeup-item wip">
-            <div class="writeup-header">
-                <span class="writeup-title">pwnable.kr: syscall</span>
-                <span class="writeup-date">WIP</span>
-            </div>
-            <p class="writeup-desc">Kernel syscall table manipulation and privilege escalation</p>
-        </div>
     </main>
 </div>
 </body>
